major main-page update

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -258,6 +258,32 @@
           </div>
           <div fxFlex="60">
             <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+              <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                <a class="item-title">PhD in EECS | Machine Learning</a>
+                <div fxLayout="row">
+                  <h3>
+                    <a class="item-subtitle link-style-black" href="https://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a></h3>
+                </div>
+                <p class="item-date-loc">
+                  <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                  June 2022 - June 2027
+                  <a fxHide.xs>
+                    <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                    Cambridge, MA
+                  </a>
+                </p>
+                <p class="item-content">
+                  Co-advised by Prof. <a
+                  href="http://people.csail.mit.edu/tommi/"
+                  target="_blank"
+                  class="link-style-green">Tommi Jaakkola</a> and Prof. <a
+                  href="https://www.regina.csail.mit.edu/"
+                  target="_blank"
+                  class="link-style-green">Regina Barzilay</a>.
+                </p>
+              </div>
+              <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
               <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                 <a class="item-title">M.Sc. Computer Science | Machine Learning Major</a>
                 <div fxLayout="row">
@@ -340,7 +366,7 @@
             <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
               <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
                    fxLayoutAlign.lt-md="center center">
-                <h1 class="left-titles">RESEARCH</h1>
+                <h1 class="left-titles">More Research!</h1>
               </div>
             </div>
             <div fxFlex="60">
@@ -353,7 +379,7 @@
         </div>
         <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
              fxLayoutAlign="center center">
-          <h1 class="left-titles">RESEARCH</h1>
+          <h1 class="left-titles">More Research!</h1>
         </div>
         <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
              fxLayoutAlign.lt-md="center center"
@@ -362,6 +388,28 @@
           </div>
           <div fxFlex="60">
             <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+              <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                <a class="item-title">ML Research Intern</a>
+                <div fxLayout="row">
+                  <h3>
+                    <a class="item-subtitle link-style-black" href="https://www.valencediscovery.com/" target="_blank">
+                      Valence Discovery</a>
+                  </h3>
+                </div>
+                <p class="item-date-loc">
+                  <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                  Feb 2022 - May 2022
+                  <a fxHide.xs>
+                    <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                    remote
+                  </a>
+                </p>
+                <p class="item-content">
+                   Protein sequence and molecular graph based binding affinity predictions.
+                </p>
+              </div>
+              <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
               <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                 <a class="item-title">MIT Internship: Geometric DL for Binding Prediction</a>
                 <div fxLayout="row">
@@ -378,10 +426,10 @@
                 </div>
                 <p class="item-date-loc">
                   <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                  Oct 2021 - Present
+                  Oct 2021 - Feb 2022
                   <a fxHide.xs>
                     <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                    Boston, US
+                    remote
                   </a>
                 </p>
                 <p class="item-content">
@@ -638,9 +686,92 @@
                   <div fxLayout="row">
                     <h3>
                       <a class="item-subtitle link-style-black"
+                         href="https://www.absci.com/"
+                         target="_blank">
+                        Absci</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    May 2022: Drug design with geometric deep learning. (International AI drug discovery company) Host: Joshua Meier
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://iclr.cc/Conferences/2022"
+                         target="_blank">
+                        ICLR 2022 Machine Learning for Drug Discovery</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    April 2022: Spotlight talk about EquiBind paper.
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://odysseytx.com/"
+                         target="_blank">
+                        Odyssey Therapeutics</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    April 2022: Drug design with geometric deep learning. (International AI-Biotech company) Host: Dr. Leonard Wossnig
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://relaytx.com/"
+                         target="_blank">
+                         Relay Therapeutics <fa-icon class="icon-right-margin-color" [icon]="handPointLeft"></fa-icon></a> </h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    March 2022: Geometric ML for drug binding structure prediction. (Boston AI-Biotech company) Host: Dr. Patrick Walters
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://www.reverielabs.com/"
+                         target="_blank">
+                        Reverie Labs</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    March 2022: EquiBind for drug discovery. (Boston Biotech company) Host: Felix Yu
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
                          href="https://valence-discovery.github.io/M2D2-meetings/"
                          target="_blank">
-                        Mila - Quebec AI Institute</a></h3>
+                         Mila - Quebec AI Institute <fa-icon class="icon-right-margin-color" [icon]="handPointLeft"></fa-icon></a> </h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
@@ -657,7 +788,7 @@
                       <a class="item-subtitle link-style-black"
                          href="https://cortex.twitter.com/en/research-publications/publications.html#graph-learning"
                          target="_blank">
-                        Twitter Research</a></h3>
+                         Twitter Research <fa-icon class="icon-right-margin-color" [icon]="handPointLeft"></fa-icon></a> </h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
@@ -691,7 +822,7 @@
                     <h3>
                       <a class="item-subtitle link-style-black" href="https://www.tum.de/en/"
                          target="_blank">
-                        Technical University of Munich</a></h3>
+                        Technical University of Munich <fa-icon class="icon-right-margin-color" [icon]="handPointLeft"></fa-icon></a> </h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
@@ -708,7 +839,7 @@
                     <h3>
                       <a class="item-subtitle link-style-black" href="http://talks.cam.ac.uk/talk/index/162541"
                          target="_blank">
-                        University of Cambridge</a></h3>
+                         University of Cambridge <fa-icon class="icon-right-margin-color" [icon]="handPointLeft"></fa-icon></a> </h3>
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
@@ -730,8 +861,7 @@
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Oct 2021:
-                    Researach Talk hosted by Daniel Cohen
+                    Oct 2021: Molecular ML researach talk. (Montreal drug design company) Host: Daniel Cohen
 
                   </p>
                 </div>
@@ -954,7 +1084,7 @@
               <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
                 <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
                      fxLayoutAlign.lt-md="center center">
-                  <h1 class="left-titles">PROJECTS</h1>
+                  <h1 class="left-titles">Other Projects</h1>
                 </div>
               </div>
               <div fxFlex="60">
@@ -967,7 +1097,7 @@
           </div>
           <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
                fxLayoutAlign="center center">
-            <h1 class="left-titles">PROJECTS</h1>
+            <h1 class="left-titles">Other Projects</h1>
           </div>
           <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
                fxLayoutAlign.lt-md="center center"
@@ -976,6 +1106,29 @@
             </div>
             <div fxFlex="60">
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <a class="item-title">Co-founder and organizer of the Learning on Graphs Conference</a>
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black" href="https://logconference.github.io/" target="_blank">
+                        Learning on Graphs Conference</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    Nov 2021 - now
+                    <a fxHide.xs>
+                      <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                      remote
+                    </a>
+                  </p>
+                  <p class="item-content">Founded the LoG Conference together with Dr. <a href="https://petar-v.com/" target="_blank"
+                                                                                 class="link-style-green">Petar Veličković</a> and <a href="https://yuanqidu.github.io/" target="_blank"
+                                                                                                                                      class="link-style-green">Yuanqi Du</a>. LoG is a new conference that covers areas broadly related to machine learning on graphs and geometry, with a special focus on review quality.
+
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <a class="item-title">GNNs in Reinforcement Learning</a>
                   <div fxLayout="row">
@@ -1129,7 +1282,7 @@
               <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
                 <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
                      fxLayoutAlign.lt-md="center center">
-                  <h1 class="left-titles">Activities</h1>
+                  <h1 class="left-titles">Reviews</h1>
                 </div>
               </div>
               <div fxFlex="60">
@@ -1142,7 +1295,68 @@
           </div>
           <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
                fxLayoutAlign="center center">
-            <h1 class="left-titles">Activities</h1>
+            <h1 class="left-titles">Reviews</h1>
+          </div>
+          <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+               fxLayoutAlign.lt-md="center center"
+               fxLayoutAlign="center start">
+            <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
+            </div>
+            <div fxFlex="60">
+              <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
+                                                    href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34"
+                                                    target="_blank">
+                    IEEE Transactions on Pattern Analysis and Machine Intelligence</a> (Journal): 1 paper
+                  </p>
+                </div>
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
+                                               href="https://academic.oup.com/bioinformatics"
+                                               target="_blank">
+                    Bioinformatics</a> (Journal): 1 paper
+                  </p>
+                </div>
+
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <p class="item-content">
+                    <a class="item-subtitle link-style-black"
+                                               href="https://ml4health.github.io/2021/"
+                                               target="_blank">
+                    2021 Machine Learning for Health</a> (Conference): 4 papers
+                  </p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- section break -->
+        <div>
+          <div fxHide.lt-md>
+            <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+                 fxLayoutAlign="center start">
+              <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
+                <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
+                     fxLayoutAlign.lt-md="center center">
+                  <h1 class="left-titles">Voluntary Work</h1>
+                </div>
+              </div>
+              <div fxFlex="60">
+                <div fxFlex.lt-md="" fxFlex="70" class="underline-title" fxLayout="column"
+                     fxLayoutAlign.lt-md="center center">
+                  <h1 class="left-titles--hidden">.</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+               fxLayoutAlign="center center">
+            <h1 class="left-titles">Voluntary Work</h1>
           </div>
           <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
                fxLayoutAlign.lt-md="center center"
